unpackaged/main/default/objects/TID_Tracker__c/TID_Tracker__c.object-meta.xml
<CustomObject>
    <label>TID Tracker</label>
    <nameField>
        <label>Master TID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TID Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>