unpackaged/main/default/objects/TID_Tracker__c/fields/Latest_TID__c.field-meta.xml
<CustomField>
    <fullName>Latest_TID__c</fullName>
    <label>Latest TID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>