unpackaged/main/default/objects/TID_Tracker__c/fields/Remaining_TIDs__c.field-meta.xml
<CustomField>
    <fullName>Remaining_TIDs__c</fullName>
    <formula>Ending_TID__c -  Latest_TID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining TIDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>