unpackaged/main/default/objects/TID_Tracker__c/fields/Starting_TID__c.field-meta.xml
<CustomField>
    <fullName>Starting_TID__c</fullName>
    <label>Starting TID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>