unpackaged/main/default/objects/TID_Tracker__c/fields/TIDs_Remaining__c.field-meta.xml
<CustomField>
    <fullName>TIDs_Remaining__c</fullName>
    <label>TIDs Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>