unpackaged/main/default/objects/TID_Tracker__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>BMS + DCC</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>