unpackaged/main/default/objects/TID_Tracker__c/validationRules/No_TIDs_Remaining.validationRule-meta.xml
<ValidationRule>
    <fullName>No_TIDs_Remaining</fullName>
    <active>true</active>
    <errorConditionFormula>TIDs_Remaining__c = 0</errorConditionFormula>
    <errorMessage>No TIDs Remaining!</errorMessage>
</ValidationRule>